--- a/polityka/index.html
+++ b/polityka/index.html
@@ -1,1 +1,139 @@
-polityka
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+<meta charset="UTF-8">
+<title>Polityka prywatności – Ogólnopolski Rejestr Elektryków</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+body {
+  font-family: Arial, sans-serif;
+  background: #f4f6f8;
+  margin: 0;
+  padding: 20px;
+  color: #1c1c1e;
+}
+
+.container {
+  max-width: 900px;
+  margin: auto;
+  background: white;
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0 10px 25px rgba(0,0,0,.08);
+}
+
+h1 {
+  color: #0B5FA5;
+}
+
+h2 {
+  margin-top: 30px;
+  color: #083f6b;
+}
+
+p {
+  line-height: 1.6;
+  margin: 12px 0;
+}
+
+ul {
+  margin-left: 20px;
+}
+
+a {
+  color: #0B5FA5;
+}
+</style>
+</head>
+
+<body>
+<div class="container">
+
+<h1>Polityka prywatności</h1>
+
+<p>
+Niniejsza Polityka prywatności określa zasady przetwarzania danych osobowych w serwisie
+<strong>Ogólnopolski Rejestr Elektryków (OREP)</strong>.
+</p>
+
+<h2>1. Administrator danych</h2>
+<p>
+Administratorem danych osobowych jest operator serwisu Ogólnopolski Rejestr Elektryków (OREP).
+</p>
+
+<h2>2. Zakres przetwarzanych danych</h2>
+<p>W ramach rejestru przetwarzane mogą być następujące dane:</p>
+<ul>
+  <li>imię i nazwisko,</li>
+  <li>miasto i województwo,</li>
+  <li>numer telefonu,</li>
+  <li>adres e-mail,</li>
+  <li>numery uprawnień SEP i kwalifikacji,</li>
+  <li>informacje o zakresie wykonywanych prac,</li>
+  <li>załączone dokumenty potwierdzające uprawnienia.</li>
+</ul>
+
+<h2>3. Cel przetwarzania danych</h2>
+<p>Dane są przetwarzane w celu:</p>
+<ul>
+  <li>prowadzenia publicznego rejestru elektryków,</li>
+  <li>weryfikacji kwalifikacji zawodowych,</li>
+  <li>umożliwienia kontaktu z elektrykiem przez użytkowników serwisu,</li>
+  <li>zapewnienia wiarygodności rejestru.</li>
+</ul>
+
+<h2>4. Podstawa prawna</h2>
+<p>
+Dane przetwarzane są na podstawie zgody użytkownika (art. 6 ust. 1 lit. a RODO).
+</p>
+
+<h2>5. Publiczny charakter rejestru</h2>
+<p>
+Rejestr OREP ma charakter publiczny. Oznacza to, że część danych (imię, nazwisko, miasto, telefon, status, zakres uprawnień)
+może być widoczna dla wszystkich użytkowników internetu.
+</p>
+
+<h2>6. Odpowiedzialność za dane</h2>
+<p>
+Użytkownik oświadcza, że podaje dane zgodne z prawdą i posiada prawo do ich publikacji.
+Administrator nie ponosi odpowiedzialności za nieprawdziwe lub nieaktualne dane wprowadzone przez użytkownika.
+</p>
+
+<h2>7. Odbiorcy danych</h2>
+<p>
+Dane mogą być przetwarzane przez podmioty techniczne obsługujące system (np. hosting, system bazy danych).
+</p>
+
+<h2>8. Okres przechowywania danych</h2>
+<p>
+Dane są przechowywane do momentu cofnięcia zgody lub usunięcia konta przez użytkownika.
+</p>
+
+<h2>9. Prawa użytkownika</h2>
+<p>Użytkownik ma prawo do:</p>
+<ul>
+  <li>dostępu do swoich danych,</li>
+  <li>ich poprawienia,</li>
+  <li>usunięcia,</li>
+  <li>ograniczenia przetwarzania,</li>
+  <li>cofnięcia zgody w dowolnym momencie.</li>
+</ul>
+
+<h2>10. Bezpieczeństwo</h2>
+<p>
+Dane są przechowywane w systemach zabezpieczonych zgodnie z aktualnymi standardami technicznymi.
+</p>
+
+<h2>11. Kontakt</h2>
+<p>
+W sprawach dotyczących danych osobowych można skontaktować się z administratorem poprzez formularz na stronie OREP.
+</p>
+
+<p style="margin-top:40px; font-size:13px; color:#666;">
+Ostatnia aktualizacja: 2026
+</p>
+
+</div>
+</body>
+</html>
