--- a/index.html
+++ b/index.html
@@ -204,7 +204,16 @@
     <div class="feature">
       <img src="bezpieczenstwo.png" alt="Bezpieczeństwo" />
       <h3>Bezpieczeństwo</h3>
-      <p>Weryfikacja uprawnień i certyfikatów w czasie rzeczywistym...</p>
+<p style="text-align: justify;">
+Ogólnopolski Rejestr Elektryków udostępnia profesjonalną platformę techniczną,
+która umożliwia specjalistom z branży elektroenergetycznej publikowanie,
+aktualizowanie oraz prezentowanie swoich kwalifikacji zawodowych.
+Każdy profil tworzony jest przez uprawnionego elektryka, który samodzielnie
+zarządza swoimi danymi oraz dokumentami potwierdzającymi kompetencje.
+System zapewnia spójność, przejrzystość i techniczną integralność informacji,
+umożliwiając użytkownikom szybkie i wygodne sprawdzenie deklarowanego
+statusu kwalifikacji danego fachowca.
+</p>
     </div>
 
     <div class="feature">
