--- a/index.html
+++ b/index.html
@@ -218,8 +218,15 @@ statusu kwalifikacji danego fachowca.
 
     <div class="feature">
       <img src="certyfikowani.png" alt="Certyfikowani fachowcy" />
-      <h3>Certyfikowani fachowcy</h3>
-      <p>Wyłącznie certyfikowani i sprawdzeni fachowcy...</p>
+   <h3>Certyfikowani fachowcy</h3>
+<p style="text-align: justify;">
+Ogólnopolski Rejestr Elektryków prezentuje profile elektryków posiadających
+udokumentowane kwalifikacje zawodowe, którzy samodzielnie publikują informacje
+o swoich uprawnieniach i doświadczeniu. Platforma umożliwia przejrzyste
+zaprezentowanie zakresu kompetencji, specjalizacji oraz statusu profilu,
+dzięki czemu klienci mogą w wygodny sposób zapoznać się z ofertą fachowców
+działających w danym regionie.
+</p>
     </div>
 
     <div class="feature">
