--- a/index.html
+++ b/index.html
@@ -232,7 +232,14 @@ działających w danym regionie.
     <div class="feature">
       <img src="rejestracja.png" alt="Rejestracja" />
       <h3>Rejestracja</h3>
-      <p>Prosta rejestracja i szybki dostęp do danych</p>
+<p style="text-align: justify;">
+Proces rejestracji w Ogólnopolskim Rejestrze Elektryków został zaprojektowany
+w sposób prosty i przejrzysty, aby umożliwić fachowcom szybkie utworzenie
+i zarządzanie swoim profilem zawodowym. Po założeniu konta użytkownik
+uzyskuje dostęp do panelu, w którym może samodzielnie wprowadzać,
+aktualizować oraz prezentować informacje dotyczące swoich kwalifikacji
+i zakresu wykonywanych usług.
+</p>
     </div>
   </section>
 </div>
