--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -235,7 +235,7 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
       </div>
       <div class="small">UPRAWNIENIA: ${e.gwiazdki}</div>
       </div>
-      <div class="status">STATUS: ${e.status}</div>
+      <div class="status">status: ${e.status}</div>
     `
     results.appendChild(d)
   })
