--- a/index.html
+++ b/index.html
@@ -216,32 +216,37 @@ statusu kwalifikacji danego fachowca.
 </p>
     </div>
 
-    <div class="feature">
-      <img src="certyfikowani.png" alt="Certyfikowani fachowcy" />
-   <h3>Certyfikowani fachowcy</h3>
-<p style="text-align: justify;">
-Ogólnopolski Rejestr Elektryków prezentuje profile elektryków posiadających
-udokumentowane kwalifikacje zawodowe, którzy samodzielnie publikują informacje
-o swoich uprawnieniach i doświadczeniu. Platforma umożliwia przejrzyste
-zaprezentowanie zakresu kompetencji, specjalizacji oraz statusu profilu,
-dzięki czemu klienci mogą w wygodny sposób zapoznać się z ofertą fachowców
-działających w danym regionie.
-</p>
-    </div>
+    <section class="features">
 
-    <div class="feature">
-      <img src="rejestracja.png" alt="Rejestracja" />
-      <h3>Rejestracja</h3>
-<p style="text-align: justify;">
-Proces rejestracji w Ogólnopolskim Rejestrze Elektryków został zaprojektowany
-w sposób prosty i przejrzysty, aby umożliwić fachowcom szybkie utworzenie
-i zarządzanie swoim profilem zawodowym. Po założeniu konta użytkownik
-uzyskuje dostęp do panelu, w którym może samodzielnie wprowadzać,
-aktualizować oraz prezentować informacje dotyczące swoich kwalifikacji
-i zakresu wykonywanych usług.
-</p>
-    </div>
-  </section>
+  <div class="feature-box">
+    <img src="pl.png" alt="">
+    <h3>Bezpieczeństwo</h3>
+    <p>
+      Ogólnopolski Rejestr Elektryków zapewnia bezpieczną platformę do prezentowania
+      i weryfikowania kwalifikacji elektryków. Każdy fachowiec zarządza własnym profilem
+      i dokumentami potwierdzającymi uprawnienia.
+    </p>
+  </div>
+
+  <div class="feature-box">
+    <img src="eu.png" alt="">
+    <h3>Certyfikowani fachowcy</h3>
+    <p>
+      Rejestr prezentuje profile elektryków posiadających udokumentowane kwalifikacje.
+      Klienci mogą w prosty sposób sprawdzić kompetencje, specjalizacje oraz status profilu.
+    </p>
+  </div>
+
+  <div class="feature-box">
+    <img src="pl-godlo.png" alt="">
+    <h3>Rejestracja</h3>
+    <p>
+      Proces rejestracji jest szybki i prosty. Po utworzeniu konta elektryk może zarządzać
+      swoim profilem, aktualizować dane i prezentować zakres wykonywanych usług.
+    </p>
+  </div>
+
+</section>
 </div>
 
 <!-- STOPKA -->
