--- a/index.html
+++ b/index.html
@@ -201,46 +201,25 @@
   </main>
 
   <section class="features">
-    <div class="feature">
-      <img src="bezpieczenstwo.png" alt="Bezpieczeństwo" />
-      <h3>Bezpieczeństwo</h3>
-<p style="text-align: justify;">
-Ogólnopolski Rejestr Elektryków udostępnia profesjonalną platformę techniczną,
-która umożliwia specjalistom z branży elektroenergetycznej publikowanie,
-aktualizowanie oraz prezentowanie swoich kwalifikacji zawodowych.
-Każdy profil tworzony jest przez uprawnionego elektryka, który samodzielnie
-zarządza swoimi danymi oraz dokumentami potwierdzającymi kompetencje.
-System zapewnia spójność, przejrzystość i techniczną integralność informacji,
-umożliwiając użytkownikom szybkie i wygodne sprawdzenie deklarowanego
-statusu kwalifikacji danego fachowca.
-</p>
-    </div>
+  
 
     <section class="features">
 
-  <div class="feature-box">
-    <img src="pl.png" alt="">
-    <h3>Bezpieczeństwo</h3>
-    <p>
-      Ogólnopolski Rejestr Elektryków zapewnia bezpieczną platformę do prezentowania
-      i weryfikowania kwalifikacji elektryków. Każdy fachowiec zarządza własnym profilem
-      i dokumentami potwierdzającymi uprawnienia.
-    </p>
-  </div>
+  <div class="feature">
+     <img src="bezpieczenstwo.png" alt="Bezpieczeństwo" />
+ <h3>Bezpieczeństwo</h3>
 
-  <div class="feature-box">
-    <img src="eu.png" alt="">
-    <h3>Certyfikowani fachowcy</h3>
-    <p>
+<p style="text-align: justify;"><p>
       Rejestr prezentuje profile elektryków posiadających udokumentowane kwalifikacje.
       Klienci mogą w prosty sposób sprawdzić kompetencje, specjalizacje oraz status profilu.
     </p>
   </div>
 
-  <div class="feature-box">
+  <div class="feature">
     <img src="pl-godlo.png" alt="">
     <h3>Rejestracja</h3>
-    <p>
+
+    <p style="text-align: justify;"><p>
       Proces rejestracji jest szybki i prosty. Po utworzeniu konta elektryk może zarządzać
       swoim profilem, aktualizować dane i prezentować zakres wykonywanych usług.
     </p>
