--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
   </div>
 
   <div class="feature">
-    <img src="pl-godlo.png" alt="">
+    <img src="rejestroacja.png" alt="">
     <h3>Rejestracja</h3>
 
     <p style="text-align: justify;"><p>
