--- a/index.html
+++ b/index.html
@@ -216,13 +216,25 @@
   </div>
 
   <div class="feature">
-    <img src="rejestroacja.png" alt="">
+    <img
+ src="rejestracja.png" alt="rejestracja">
     <h3>Rejestracja</h3>
 
     <p style="text-align: justify;"><p>
       Proces rejestracji jest szybki i prosty. Po utworzeniu konta elektryk może zarządzać
       swoim profilem, aktualizować dane i prezentować zakres wykonywanych usług.
     </p>
+  <img
+ src="certyfikacja.png" alt="certyfikscja">
+  <h3>Certyfikowani fachowcy</h3>
+<p style="text-align: justify;">
+Ogólnopolski Rejestr Elektryków prezentuje profile elektryków posiadających
+udokumentowane kwalifikacje zawodowe, którzy samodzielnie publikują informacje
+o swoich uprawnieniach i doświadczeniu. Platforma umożliwia przejrzyste
+zaprezentowanie zakresu kompetencji, specjalizacji oraz statusu profilu,
+dzięki czemu klienci mogą w wygodny sposób zapoznać się z ofertą fachowców
+działających w danym regionie.
+</p>
   </div>
 
 </section>
