--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       swoim profilem, aktualizować dane i prezentować zakres wykonywanych usług.
     </p>
   <img
- src="certyfikowani.png" alt="certyfikscja">
+ src="certyfikowani.png" alt="certyfikacja">
   <h3>Certyfikowani fachowcy</h3>
 <p style="text-align: justify;">
 Ogólnopolski Rejestr Elektryków prezentuje profile elektryków posiadających
