--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
       Proces rejestracji jest szybki i prosty. Po utworzeniu konta elektryk może zarządzać
       swoim profilem, aktualizować dane i prezentować zakres wykonywanych usług.
     </p>
+  <div class="feature">
   <img
  src="certyfikowani.png" alt="certyfikacja">
   <h3>Certyfikowani fachowcy</h3>
