--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -129,7 +129,7 @@
 
     .rodo-label input[type="checkbox"] {
       margin-right: 10px;
-      accent-color: orange; /* Pomarańczowy ptaszek i obramowanie */
+      accent-color: orange;
     }
   </style>
 </head>
@@ -179,7 +179,6 @@
   <label>Załącz skan uprawnień</label>
   <input type="file" id="plik" multiple>
 
-  <!-- ✅ Checkbox RODO -->
   <label class="rodo-label">
     <input type="checkbox" id="rodo" required>
     Wyrażam zgodę na przetwarzanie moich danych osobowych w celu publikacji w Ogólnopolskim Rejestrze Elektryków zgodnie z Regulaminem Platformy. Oświadczam, że dane są prawdziwe i ponoszę za nie odpowiedzialność.
@@ -207,7 +206,6 @@ const fields = [
   'nrE','nrEPomiary','nrD','telefon','zajmujeSie'
 ]
 
-// Funkcja ładowania województw z opcjonalnym ustawieniem wybranego
 async function loadWojewodztwa(selectedWoj = null) {
   const { data, error } = await supabase
     .from('wojewodztwa')
@@ -227,12 +225,10 @@ async function loadWojewodztwa(selectedWoj = null) {
 
   if (selectedWoj) {
     wojSelect.value = selectedWoj
-    // Wywołanie change, aby załadować miasta
     wojSelect.dispatchEvent(new Event('change'))
   }
 }
 
-// Event zmiany województwa -> ładowanie miast
 document.getElementById('wojewodztwo').addEventListener('change', async function() {
   const wojId = this.value
   const miastoSelect = document.getElementById('miasto')
@@ -261,12 +257,10 @@ document.getElementById('wojewodztwo').addEventListener('change', async function
   miastoSelect.disabled = false
 })
 
-// Zamknięcie formularza
 document.getElementById('close-btn').addEventListener('click', () => {
   window.location.href = 'https://orep.pl/';
 })
 
-// DOMContentLoaded -> pobranie danych użytkownika i aktualizacja pól
 document.addEventListener('DOMContentLoaded', async () => {
   const { data: { user } } = await supabase.auth.getUser()
   if (!user) return
@@ -282,26 +276,14 @@ document.addEventListener('DOMContentLoaded', async () => {
   if (data) {
     document.getElementById('form-title').textContent = 'Aktualizacja danych'
     document.getElementById('submit-btn').textContent = 'Zapisz zmiany'
-
     fields.forEach(f => data[f] && (document.getElementById(f).value = data[f]))
-
-    // --- Ustawienie województwa i automatyczne załadowanie miast ---
-    if (data.wojewodztwo) {
-      await loadWojewodztwa(data.wojewodztwo)
-
-      // Po załadowaniu miast ustawiamy miasto
-      if (data.miasto) {
-        const miastoSelect = document.getElementById('miasto')
-        miastoSelect.value = data.miasto
-      }
-    }
+    if (data.wojewodztwo) await loadWojewodztwa(data.wojewodztwo)
+    if (data.miasto) document.getElementById('miasto').value = data.miasto
   } else {
-    // Nowy użytkownik
     loadWojewodztwa()
   }
 })
 
-// Obsługa submit
 document.getElementById('register-form').addEventListener('submit', async e => {
   e.preventDefault()
   loading.style.display = 'block'
@@ -322,13 +304,57 @@ document.getElementById('register-form').addEventListener('submit', async e => {
     return
   }
 
+  // === WALIDACJA PLIKU ===
+  const allowedTypes = ['application/pdf', 'image/jpeg', 'image/png']
+  const maxSize = 5 * 1024 * 1024 // 5MB
+
+  for (let i = 0; i < plik.files.length; i++) {
+    const file = plik.files[i]
+    if (!allowedTypes.includes(file.type)) {
+      loading.style.display = 'none'
+      result.textContent = 'Nieprawidłowy typ pliku. Dozwolone: PDF, JPG, PNG'
+      result.className = 'error'
+      return
+    }
+    if (file.size > maxSize) {
+      loading.style.display = 'none'
+      result.textContent = 'Plik zbyt duży. Maksymalny rozmiar: 5 MB'
+      result.className = 'error'
+      return
+    }
+  }
+
   let plikUrls = []
   if (plik.files.length) {
     for (let i = 0; i < plik.files.length; i++) {
-      const path = `permissions/${currentUser.id}/${Date.now()}_${plik.files[i].name}`
-      await supabase.storage.from('attachments').upload(path, plik.files[i], { upsert: true })
-      const { data } = await supabase.storage.from('attachments').createSignedUrl(path, 3600)
-      plikUrls.push(data.signedUrl)
+      const file = plik.files[i]
+      const path = `permissions/${currentUser.id}/${Date.now()}_${file.name}`
+
+      const { error: uploadError } = await supabase
+        .storage
+        .from('attachments')
+        .upload(path, file, { upsert: true })
+
+      if (uploadError) {
+        loading.style.display = 'none'
+        result.textContent = 'Błąd wysyłania pliku: ' + uploadError.message
+        result.className = 'error'
+        return
+      }
+
+      const { data: urlData, error: urlError } = await supabase
+        .storage
+        .from('attachments')
+        .createSignedUrl(path, 3600)
+
+      if (urlError) {
+        loading.style.display = 'none'
+        result.textContent = 'Błąd generowania linku do pliku'
+        result.className = 'error'
+        return
+      }
+
+      plikUrls.push(urlData.signedUrl)
     }
   }
 
