--- a/polityka/index.html
+++ b/polityka/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
+<meta name="robots" content="noindex, nofollow">
 <meta charset="UTF-8">
 <title>Polityka prywatności – Ogólnopolski Rejestr Elektryków</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
