--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -229,7 +229,7 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
     d.innerHTML = `
       <div class="lp">${i+1}</div>
       <div class="person">
-        <div class="name">${e.imie} ${e.nazwisko}</div>
+        <div class="name">${e.imie} ${e.nazwisko} ${e.gwiazdki}</div>
         <div class="small">${e.email}</div>
         <div class="small">${e.telefon}</div>
       </div>
