--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -233,9 +233,9 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
         <div class="small">${e.email}</div>
         <div class="small">${e.telefon}</div>
       </div>
-      <div class="small">${e.gwiazdki}</div>
+      
       </div>
-      <div class="small">${e.status}</div>
+      <div class="small">Status elektryka ${e.status}</div>
     `
     results.appendChild(d)
   })
