--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -235,7 +235,7 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
       </div>
       
       </div>
-      <div class="small">Status elektryka ${e.status}</div>
+      <div class="small">Status elektryka / weryfikacja ${e.status}</div>
     `
     results.appendChild(d)
   })
