--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -241,6 +241,12 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
   })
 })
 </script>
+<footer>
+  &copy; 2025 Ogólnopolski Rejestr Elektryków<br />
 
+  <div class="header-wrap">
+    <span class="white">OREP</span><span class="red">.pl</span>
+  </div>
+</footer>
 </body>
 </html>
