--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -239,7 +239,7 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
     d.innerHTML = `
       <div class="lp">${i+1}</div>
       <div class="person">
-        <div class="name">${e.imie} ${e.nazwisko} ${e.gwiazdki}<sup><a href="#p1">1</a></sup>
+        <div class="name">${e.imie} ${e.nazwisko} ${e.gwiazdki}<sup><a href="#p1">*</a></sup>
 </div>
         <div class="small">${e.email}</div>
         <div class="small">${e.telefon}</div>
@@ -253,7 +253,7 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
 })
 </script>
 <p id="p1">
-  <sup>1</sup> Dane są weryfikowane na podstawie numeru uprawnień.
+  <sup>*</sup> Dane są weryfikowane na podstawie numeru uprawnień.
 </p>
 </body>
 </html>
