--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -72,6 +72,13 @@ sup a:hover {
   text-decoration: underline;
 }
 
+.przypis {
+  margin: 30px 20px;
+  padding: 10px 15px;
+  background: #f6f8fa;
+  border-left: 4px solid #0077ff;
+  border-radius: 6px;
+}
 /* RESULTS CARDS */
 #results{
   margin-top:20px;
@@ -253,7 +260,7 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
   })
 })
 </script>
-<p id="p1">
+<p id="p1">class="przypis">
   <sup>*</sup>   Dane są weryfikowane na podstawie numeru uprawnień.
 </p>
 </body>
