--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -260,7 +260,7 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
   })
 })
 </script>
-<p id="p1">class="przypis">
+<p id="p1"class="przypis">
   <sup>*</sup>   Dane są weryfikowane na podstawie numeru uprawnień.
 </p>
 </body>
