--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -261,7 +261,6 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
 })
 </script>
 <p id="p1"class="przypis">
-  <sup>*</sup>   Dane są weryfikowane na podstawie numeru uprawnień.
-</p>
+  <sup>*</sup>Opis dotyczący gwiazdek oraz posiadanego statusu: <br>⭐ elektryk posiada uprawnienia Eksploatacja.</br><br> ⭐⭐ elektryk posiada uprawnienia Eksploatacja wraz z prawem. wykonywania pomiarów ochronnych.</br><br>⭐⭐⭐ elektryk posiada wszystkie możliwe uprawnienia z prawem do prowadzenia Dozoru instalacji i sieci energetycznych.</br><br> ✅ Elektryk udostepnił uprawnienia i został pozytywnie zweryfikowany.</br><br> ⌛ Elektryk udostepnił uprawnienia i oczekuję na weryfikację.</br><br>❌ Elektryk NIE udostepnił uprawnień do weryfikacji lub nie zostały wydanę przez komisję do tego uprawnione zgodnie z URE .</br><p>
 </body>
 </html>
