--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -78,6 +78,7 @@ sup a:hover {
   background: #f6f8fa;
   border-left: 4px solid #0077ff;
   border-radius: 6px;
+ font-size: 14px;
 }
 /* RESULTS CARDS */
 #results{
