--- a/wyszukiwarka/index.html
+++ b/wyszukiwarka/index.html
@@ -248,7 +248,7 @@ document.getElementById("szukaj").addEventListener("click", async ()=>{
     d.innerHTML = `
       <div class="lp">${i+1}</div>
       <div class="person">
-        <div class="name">${e.imie} ${e.nazwisko} ${e.gwiazdki}<sup><a href="#p1">*</a></sup>
+        <div class="name">${e.imie} ${e.nazwisko} ${e.gwiazdki}
 </div>
         <div class="small">${e.email}</div>
         <div class="small">${e.telefon}</div>
