--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/favicon.png">
 <meta name="robots" content="noindex, nofollow">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
